# mousetweaks

./: AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  git.mk  mousetweaks.doap
data/: DwellClick_Factory.server.in.in  Makefile.am  PointerCapture_Factory.server.in.in  ctw.glade  dwell-click-applet.glade  dwell-click-applet.ui  mousetweaks.convert  mousetweaks.schemas  mousetweaks.schemas.in  mousetweaks.ui  org.gnome.applets.DwellClickApplet.panel-applet.in.in  org.gnome.applets.PointerCaptureApplet.panel-applet.in.in  org.gnome.mousetweaks.gschema.xml  org.gnome.mousetweaks.gschema.xml.in  org.gnome.panel.applet.DwellClickAppletFactory.service.in  org.gnome.panel.applet.PointerCaptureAppletFactory.service.in  org.gnome.pointer-capture.gschema.xml.in  pointer-capture-applet.glade  pointer-capture-applet.schemas  pointer-capture-applet.schemas.in  pointer-capture-applet.ui
help/: ChangeLog  Makefile.am  mousetweaks.omf.in
help/C/: Makefile.am  legal.xml  mousetweaks.xml
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po  mousetweaks-help.HEAD.pot
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fr/: fr.po
help/it/: it.po
help/oc/: oc.po
help/sl/: sl.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
man/: Makefile.am  dwell-click-applet.1  mousetweaks.1  pointer-capture-applet.1
pixmaps/: Makefile.am
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  POTFILES.skip  an.gmo  an.po  ar.gmo  ar.po  as.gmo  as.po  ast.gmo  ast.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  bs.gmo  bs.po  ca.gmo  ca.po  ca@valencia.gmo  ca@valencia.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en@shaw.gmo  en@shaw.po  (+122 more)
src/: Makefile.am  dwell-click-applet.c  mousetweaks-service.xml  mt-accessible.c  mt-accessible.h  mt-common.c  mt-common.h  mt-ctw.c  mt-ctw.h  mt-cursor-manager.c  mt-cursor-manager.h  mt-cursor.c  mt-cursor.h  mt-dbus.c  mt-dbus.h  mt-enum-types.c.template  mt-enum-types.h.template  mt-listener.c  mt-listener.h  mt-main.c  mt-main.h  mt-pidfile.c  mt-pidfile.h  mt-service.c  mt-service.h  mt-session.c  mt-session.h  mt-settings.c  mt-settings.h  mt-sig-handler.c  mt-sig-handler.h  mt-timer.c  mt-timer.h  pointer-capture-applet.c
