SUBDIRS = src data pixmaps po help man

ACLOCAL_AMFLAGS = -I m4

DISTCHECK_CONFIGURE_FLAGS = --disable-schemas-install

EXTRA_DIST =			\
	gnome-doc-utils.make	\
	xmldocs.make		\
	omf.make		\
	MAINTAINERS		\
	COPYING.GPL		\
	COPYING.FDL

DISTCLEANFILES =		\
	gnome-doc-utils.make	\
	omf.make		\
	xmldocs.make
